@@ -1,11 +1,22 @@
 Jython NEWS
 
 Jython 2.2 rc1
+  New features
+    - Completely rewritten socket module and new select module using java.nio 
+    which allows the use of SSL and non-blocking sockets.
+    - Explicit imports of Java classes like 'from java.net import URL' or 
+    'import java.net.URL' work with package scanning disabled.
   Bugs fixed
     - [ 1708080 ] float("1d") -> 1.0 (not ValueError as expected)
     - [ 1661700 ] os.path.abspath raises IOException if drive not accessible
     - [ 1662689 ] os.path.abspath eliminates symlinks
     - [ 1717498 ] os.path.splitdrive does nothing for Windows drives
+    - [ 1622207 ] _weakref.ref(o) only works if the argument is hasheable
+    - [ 1735864 ] Parser not threadsafe
+    - [ 1722306 ] OverflowError in UDP Socket Implementation
+    - [ 1348645 ] socket.py send() requires too many arguments
+    - [ 998602 ] urllib : https request does not work
+    - [ 621180 ] module socket _udpsocket close bug
 
 Jython 2.2 beta2
   New features
